--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -387,9 +387,9 @@ form .inputcontainer{
 }
 
 .inputCntn input{
-    background-color: #fff;
+    background-color: transparent;
     font-size: 1.1em;
-    color: #222;
+    color: var(--text-clr1);
     padding-left: 40px;
     width: 100%;
     height: 100%;
@@ -398,9 +398,9 @@ form .inputcontainer{
 }
 
 .passcntn input{
-    background-color: #fff;
+    background-color: transparent;
     font-size: 1.1em;
-    color: #222;
+    color: var(--text-clr1);
     padding-right: 40px;
     width: 100%;
     height: 100%;
@@ -655,22 +655,4 @@ form .errorMsg{
     color: var(--danger-clr);
     font-size: 0.8em;
     font-weight: 400;
-}
-
-/* Ensure sign-in button is visible and clickable on small screens */
-@media screen and (max-width: 600px) {
-    .fancyBtn {
-        width: 100%;
-        max-width: 300px;
-        height: 50px;
-        font-size: 1.2em;
-        margin-top: 20px;
-        border: 2px solid #FFB347;
-        background: #FFB347;
-        color: #000;
-        cursor: pointer;
-        touch-action: manipulation;
-        z-index: 10;
-        position: relative;
-    }
 }
